--- a/Travel/Travel.csproj
+++ b/Travel/Travel.csproj
@@ -125,9 +125,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Sınıflar\Adres.cs" />
     <Compile Include="Models\Sınıflar\Anasayfa.cs" />
     <Compile Include="Models\Sınıflar\Blog.cs" />
     <Compile Include="Models\Sınıflar\Hakkımızda.cs" />
+    <Compile Include="Models\Sınıflar\İletisim.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
