--- a/Travel/Web.config
+++ b/Travel/Web.config
@@ -65,4 +65,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="Context" connectionString="data source=LAPTOP-G0AGDRK6; initial catalog=TravelDB; integrated security=true;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
